--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,3 +1,11 @@
 // Define your breakpoints
 $tablet: new-breakpoint(max-width 768px 8);
 $mobile: new-breakpoint(max-width 480px 4);
+
+.home {
+  @include outer-container();
+}
+div.page-content {
+  @include span-columns(8);
+  @include shift(2);
+}
