--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1,6 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 header.site-header {
   font: 500 1.4em Helvetica;
   text-align: left;
+  background: $dk_teal;
   a {
     color: #000;
     text-decoration: none;
@@ -11,6 +17,7 @@ header.site-header {
   h1 {
     font: 500 2em Helvetica;
     letter-spacing: -0.11em;
+    color: #CCCCCC;
   }
 }
 
