--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,7 +1,18 @@
 // Define your breakpoints
 $tablet: new-breakpoint(max-width 768px 8);
-$mobile: new-breakpoint(max-width 480px 4);
+$mobile: new-breakpoint(min-width 480px 4);
 
+//header.html
+header div.wrap {
+  @include outer-container();
+  @include pad(0.5em);
+}
+div.site-title {
+  @include media($tablet) {
+    @include span-columns(8);
+    @include shift(2);
+  }
+}
 .home {
   @include outer-container();
 }
