--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrap">
+    <div class="wrap">
+      <div class="main-grid">
       {{ content }}
       </div>
     </div>
