--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1,14 +1,22 @@
-* {
-  margin: 0;
-  padding: 0;
+
+// General
+body {
+  color: $offBlack;
+  background: $offWhite;
+  font: 300 1em Helvetica;
 }
-// body {
-//   color: $offBlack;
-//   background: $offWhite;
-// }
+hr.orange {
+  border: 1px solid $orange;
+  margin: 1.5em 0;
+  clear: both;
+}
+
+//Site Header
 header.site-header {
   background: $dk_teal;
   border-bottom: 1px solid;
+  margin: 0;
+  padding: 0;
   a {
     color: $offBlack;
     text-decoration: none;
@@ -17,26 +25,21 @@ header.site-header {
     }
   }
 }
-header.site-header:after {
-  content:"";
-  visibility: hidden;
-  clear: both;
-}
 div.site-title {
   padding: 0.25em;
-  display: inline-block;
   h1 {
-    font: 500 2em Helvetica;
-    letter-spacing: -0.11em;
-    text-align: left;
+    font: 300 2em Helvetica;
+    letter-spacing: 0.5em;
+    text-align: center;
     color: $offBlack;
   }
 }
 
+//Top Navigation Bar
 nav.site-nav {
   font: 400 1em Helvetica;
-  display: inline-block;
-  margin-left: 60%;
+  color: #000;
+  text-align:center;
 }
 div.page-link {
   display: inline-block;
@@ -47,3 +50,39 @@ div.page-link {
     padding: 0 0 0 0.75em;
   }
 }
+
+//List of Posts
+ul.posts {
+  padding: 1em;
+  li {
+    list-style: none;
+    padding: 0;
+    margin-right: 1em;
+    @include media($desktop) {
+      margin: 0;
+    }
+  }
+}
+.post-title {
+  h2 {
+    font: 300 1.5em Helvetica;
+    margin: 0;
+  }
+  a {
+    color: $offBlack;
+  }
+  a:hover {
+    color: $gray;
+  }
+}
+.post-date {
+  margin-top: 1em;
+  font-style: italic;
+  color: $lt_teal;
+}
+.post-excerpt {
+  p { 
+    margin: 0 0 1em 0; 
+  }
+}
+
