init new branch

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,23 @@
 <footer class="site-footer">
 
   <div class="wrap">
+    <div class="social">
+      <ul>
+        <li>
+          <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i>  {{ site.email }}</a>
+        </li>
+        <li>
+          <i class="fa fa-instagram"></i>: <a href="http://instagram.com/{{ site.insta_username }}">{{ site.insta_username }}</a> 
+        </li>
+        <li>
+          <i class="fa fa-twitter"></i>: <a href="http://twitter.com/{{ site.twitter_username }}">{{ site.twitter_username }}</a> 
+        </li>
+        <li>
+          <i class="fa fa-github"></i>: <a href="http://github.com/{{ site.github_username }}">{{ site.github_username }}</a> 
+        </li>
+      </ul>    
+    </div>
 
-    
-    <ul>
-      <li class="social"><i class="fa fa-instagram"></i>: <a href="http://instagram.com/hello_becca">hello_becca</a> </li>
-      <li class="social"><i class="fa fa-twitter"></i>: <a href="http://twitter.com/becca_aa">becca_aa</a> </li>
-      <li class="social"><i class="fa fa-github"></i>: <a href="http://github.com/brickaa">brickaa</a> </li>
-    </ul>
 
   </div>
 
