--- a/css/_settings.scss
+++ b/css/_settings.scss
@@ -1,3 +1,7 @@
+// Define your breakpoints
+$desktop: new-breakpoint(min-width 800px 12);
+$mobile: new-breakpoint(max-width 480px);
+
 //colors
 $offWhite: #F5F5F5;
 $offBlack: #404040;
