fix masonry install

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,11 @@
 
     {% include footer.html %}
 
+    <script>
+      window.onload = function() {
+        var wall = new Masonry( document.getElementById('container') );
+      };
+    </script>
+
     </body>
 </html>
