--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="stylesheet" href="{{ "/font-awesome-4.1.0/css/font-awesome.css" | prepend: site.baseurl }}" >
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/main.css" | prepend: site.baseurl }}">
 
 </head>
