--- a/css/_masonry.scss
+++ b/css/_masonry.scss
@@ -1,135 +1,134 @@
-/**** Transitions ****/
+// /**** Transitions ****/
 
-.masonry,
-.masonry .masonry-brick {
-  -webkit-transition-duration: 0.7s;
-     -moz-transition-duration: 0.7s;
-      -ms-transition-duration: 0.7s;
-       -o-transition-duration: 0.7s;
-          transition-duration: 0.7s;
-}
+// .masonry,
+// .masonry .masonry-brick {
+//   -webkit-transition-duration: 0.7s;
+//      -moz-transition-duration: 0.7s;
+//       -ms-transition-duration: 0.7s;
+//        -o-transition-duration: 0.7s;
+//           transition-duration: 0.7s;
+// }
 
-.masonry {
-  -webkit-transition-property: width, height;
-     -moz-transition-property: width, height;
-      -ms-transition-property: width, height;
-       -o-transition-property: width, height;
-          transition-property: width, height;
-}
+// .masonry {
+//   -webkit-transition-property: width, height;
+//      -moz-transition-property: width, height;
+//       -ms-transition-property: width, height;
+//        -o-transition-property: width, height;
+//           transition-property: width, height;
+// }
 
-.masonry .masonry-brick {
-  -webkit-transition-property: left, right, top;
-     -moz-transition-property: left, right, top;
-      -ms-transition-property: left, right, top;
-       -o-transition-property: left, right, top;
-          transition-property: left, right, top;
-}
+// .masonry .masonry-brick {
+//   -webkit-transition-property: left, right, top;
+//      -moz-transition-property: left, right, top;
+//       -ms-transition-property: left, right, top;
+//        -o-transition-property: left, right, top;
+//           transition-property: left, right, top;
+// }
 
-/**** Demos ****/
+// /**** Demos ****/
 
-#container {
-  background: #BCE;
-  padding: 5px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  clear: both;
-  border-radius: 5px;
-}
+// #container {
+//   padding: 5px;
+//   margin-bottom: 20px;
+//   border-radius: 5px;
+//   clear: both;
+//   border-radius: 5px;
+// }
 
-.centered { margin: 0 auto; }
+// .centered { margin: 0 auto; }
 
-.box {
-  margin: 5px;
-  padding: 5px;
-  background: #FDFAF8;
-  font-size: 11px;
-  line-height: 1.4em;
-  float: left;
-  border-radius: 5px;
-}
+// .box {
+//   margin: 5px;
+//   padding: 5px;
+//   background: #FDFAF8;
+//   font-size: 11px;
+//   line-height: 1.4em;
+//   float: left;
+//   border-radius: 5px;
+// }
 
-.box h2 {
-  font-size: 14px;
-  font-weight: 200;
-}
+// .box h2 {
+//   font-size: 14px;
+//   font-weight: 200;
+// }
 
-.box img,
-#tumblelog img {
-  display: block;
-  width: 100%;
-}
+// .box img,
+// #tumblelog img {
+//   display: block;
+//   width: 100%;
+// }
 
-.rtl .box {
-  float: right;
-  text-align: right; 
-  direction: rtl;
-}
-
+// .rtl .box {
+//   float: right;
+//   text-align: right; 
+//   direction: rtl;
+// }
 
 
-.col1 { width: 80px; }
-.col2 { width: 180px; }
-.col3 { width: 280px; }
-.col4 { width: 380px; }
-.col5 { width: 480px; }
 
-.col1 img { max-width: 80px; }
-.col2 img { max-width: 180px; }
-.col3 img { max-width: 280px; }
-.col4 img { max-width: 380px; }
-.col5 img { max-width: 480px; }
+// .col1 { width: 80px; }
+// .col2 { width: 180px; }
+// .col3 { width: 280px; }
+// .col4 { width: 380px; }
+// .col5 { width: 480px; }
 
-/**** Gutters ****/
+// .col1 img { max-width: 80px; }
+// .col2 img { max-width: 180px; }
+// .col3 img { max-width: 280px; }
+// .col4 img { max-width: 380px; }
+// .col5 img { max-width: 480px; }
 
-.has-gutters .box {
-  margin: 5px 0;
-}
+// /**** Gutters ****/
 
-.has-gutters .col1 { width: 90px; }
-.has-gutters .col2 { width: 230px; }
-.has-gutters .col3 { width: 370px; }
-.has-gutters .col4 { width: 550px; }
+// .has-gutters .box {
+//   margin: 5px 0;
+// }
 
-/**** Primer comparison ****/
+// .has-gutters .col1 { width: 90px; }
+// .has-gutters .col2 { width: 230px; }
+// .has-gutters .col3 { width: 370px; }
+// .has-gutters .col4 { width: 550px; }
 
-#comparison {
-  overflow: auto;
-}
+// /**** Primer comparison ****/
 
-#comparison .example {
-  width: 420px;
-  float: left;
-  margin-right: 20px;
-}
+// #comparison {
+//   overflow: auto;
+// }
 
-#comparison .box h5 {
-  float: left;
-  margin-bottom: 0;
-  font-size: 30px;
-  margin-right: 4px;
-  line-height: 28px;
-  font-weight: bold;
-  color: #FFF;
-}
+// #comparison .example {
+//   width: 420px;
+//   float: left;
+//   margin-right: 20px;
+// }
 
-
-/**** Fluid ****/
-
-#container.fluid  {
-  padding: 5px 0;
-}
-
-.fluid .box {
-  margin: 5px 1%;
-  padding: 5px 1%;
-}
-
-.fluid .box.col1 { width: 16%; }
-.fluid .box.col2 { width: 36%; }
-.fluid .box.col3 { width: 56%; }
+// #comparison .box h5 {
+//   float: left;
+//   margin-bottom: 0;
+//   font-size: 30px;
+//   margin-right: 4px;
+//   line-height: 28px;
+//   font-weight: bold;
+//   color: #FFF;
+// }
 
 
-/**** Clearfix ****/
-.clearfix:before, .clearfix:after { content: ""; display: table; }
-.clearfix:after { clear: both; }
-.clearfix { zoom: 1; }
+// /**** Fluid ****/
+
+// #container.fluid  {
+//   padding: 5px 0;
+// }
+
+// .fluid .box {
+//   margin: 5px 1%;
+//   padding: 5px 1%;
+// }
+
+// .fluid .box.col1 { width: 16%; }
+// .fluid .box.col2 { width: 36%; }
+// .fluid .box.col3 { width: 56%; }
+
+
+// /**** Clearfix ****/
+// .clearfix:before, .clearfix:after { content: ""; display: table; }
+// .clearfix:after { clear: both; }
+// .clearfix { zoom: 1; }
