update file names, add list-grid mixin

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -45,3 +45,22 @@ div.wrap {
     @include omega();
   }
 }
+
+@mixin list-grid ($bp, $col-width, $number-li) {
+  //Creates a grid for list items
+  //$bp = breakpoint
+  //$col-width = the number of span-columns in your grid
+  //$number-li = the number of list items
+  ul {
+    @include span-columns($col-width);
+    @include pad(0);
+    
+    li {
+      @include span-columns($col-width of $col-width);
+      @include media($bp) {
+        @include span-columns($col-width / $number-li of $col-width);
+        @include omega($number-li+n);
+      }
+    }
+  }
+}
