apply grid specs

--- a/css/helpers/_grid-specs.scss
+++ b/css/helpers/_grid-specs.scss
@@ -1,3 +1,7 @@
+// Breakpoints
+$large: new-breakpoint(min-width 800px 12);
+$small: new-breakpoint(max-width 480px);
+
 %container {
   @include outer-container;
 }
