--- a/css/theme/_theme.scss
+++ b/css/theme/_theme.scss
@@ -68,7 +68,7 @@ ul.posts {
     list-style: none;
     padding: 0;
     margin-right: 1em;
-    @include media($desktop) {
+    @include media($large) {
       margin: 0;
     }
   }
