--- a/css/theme/_layout.scss
+++ b/css/theme/_layout.scss
@@ -11,7 +11,7 @@ div.site-title {
 
 //header nav
 nav {
-  @include media($large, 12, 6);
+  @include layout($large, 12, 6);
 }
 
 
@@ -34,3 +34,5 @@ nav {
     @include omega();
   }
 }
+
+
