--- a/main.css
+++ b/main.css
@@ -359,54 +359,68 @@ td,
 th {
   padding: 0; }
 
-header div.wrap {
-  max-width: 68em;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0.5em; }
-  header div.wrap:after {
-    content: "";
-    display: table;
-    clear: both; }
-
-@media screen and (min-width: 800px) {
-  div.site-title {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 65.88078%;
-    margin-left: 17.05961%; }
-    div.site-title:last-child {
-      margin-right: 0; } }
-
-@media screen and (min-width: 800px) {
-  nav {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 48.82117%;
-    margin-left: 25.58941%; }
-    nav:last-child {
-      margin-right: 0; } }
-
-div.wrap {
+.wrap {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto; }
-  div.wrap:after {
+  .wrap:after {
     content: "";
     display: table;
     clear: both; }
 
-@media screen and (min-width: 800px) {
-  .main-grid {
-    float: left;
-    display: block;
-    margin-right: 2.35765%;
-    width: 65.88078%;
-    margin-left: 17.05961%; }
-    .main-grid:last-child {
-      margin-right: 0; } }
+.wrap {
+  padding: 0 0.5em; }
+
+div.site-title {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  div.site-title:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 800px) {
+    div.site-title {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 65.88078%;
+      margin-left: 17.05961%; }
+      div.site-title:last-child {
+        margin-right: 0; } }
+
+nav {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  nav:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 800px) {
+    nav {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 48.82117%;
+      margin-left: 25.58941%; }
+      nav:last-child {
+        margin-right: 0; } }
+
+.main-grid {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%; }
+  .main-grid:last-child {
+    margin-right: 0; }
+  @media screen and (min-width: 800px) {
+    .main-grid {
+      float: left;
+      display: block;
+      margin-right: 2.35765%;
+      width: 65.88078%;
+      margin-left: 17.05961%; }
+      .main-grid:last-child {
+        margin-right: 0; } }
 
 @media screen and (min-width: 800px) {
   .post-title {
@@ -428,84 +442,12 @@ div.wrap {
     .post-excerpt:last-child {
       margin-right: 0; } }
 
-body {
-  color: #404040;
-  background: whitesmoke;
-  font: 300 1em Helvetica;
-  text-align: left; }
-
-hr.orange {
-  border: 1px solid #fd795b;
-  margin: 1.5em 0;
-  clear: both; }
-
-a {
-  color: #404040;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: underline;
-    color: #bdcfbd; }
-
-img {
-  height: 500px;
-  margin: 0 auto; }
-
-header.site-header {
-  background: #bdcfbd;
-  border-bottom: 1px solid;
-  margin: 0;
-  padding: 0; }
-  header.site-header a:hover {
-    color: #404040; }
-
-div.site-title {
-  padding: 0.25em; }
-  div.site-title h1 {
-    font: 300 2em Helvetica;
-    text-align: center;
-    color: #404040;
-    letter-spacing: 10px; }
-
-nav.site-nav {
-  font: 300 1em Helvetica;
-  text-align: center;
-  color: #000;
-  text-align: center; }
-
-div.page-link {
-  display: inline-block;
-  border-right: 1px solid;
-  padding: 0 0.75em; }
-  div.page-link:last-child {
-    border-right: none;
-    padding: 0 0 0 0.75em; }
-
-ul.posts {
-  padding: 1em; }
-  ul.posts li {
-    list-style: none;
-    padding: 0;
-    margin-right: 1em; }
-    @media screen and (min-width: 800px) {
-      ul.posts li {
-        margin: 0; } }
-
-.post-title h2 {
-  font: 300 1.5em Helvetica;
-  text-align: left;
-  margin: 0; }
-
-.post-date {
-  margin-top: 1em;
-  font-style: italic;
-  color: #666666; }
-
-.post-excerpt p {
-  margin: 0 0 1em 0; }
-
-.social {
-  font: 300 1em Helvetica;
-  text-align: center;
-  letter-spacing: 3px; }
-  .social ul li {
-    display: inline-block; }
+@media screen and (min-width: 800px) {
+  .newsapps div {
+    float: left;
+    display: block;
+    margin-right: 3.57866%;
+    width: 48.21067%;
+    padding: 0; }
+    .newsapps div:last-child {
+      margin-right: 0; } }
