continue cleaning file structure, css

--- a/css/helpers/_settings.scss
+++ b/css/helpers/_settings.scss
@@ -1,8 +1,8 @@
 //colors
-$offWhite: #F5F5F5;
-$offBlack: #404040;
+$off-white: #F5F5F5;
+$off-black: #404040;
 $gray: #666666;
-$dk_teal: #BDCFBD;
-$lt_teal: #CEDFCE;
+$dk-teal: #BDCFBD;
+$lt-teal: #CEDFCE;
 $orange: #FD795B;
 
