--- a/css/theme/_newsapps.scss
+++ b/css/theme/_newsapps.scss
@@ -1,8 +1,3 @@
 .newsapps {
-  @include media($large) {
-    div {
-      @include span-columns(4 of 8);
-      @include pad(0);
-    }
-  }
+  @include list-grid($large, 12, 3);
 }
