--- a/main.css
+++ b/main.css
@@ -368,9 +368,6 @@ th {
     display: table;
     clear: both; }
 
-.wrap {
-  padding: 0 0.5em; }
-
 div.site-title {
   float: left;
   display: block;
@@ -442,15 +439,31 @@ nav {
     .post-excerpt:last-child {
       margin-right: 0; } }
 
-@media screen and (min-width: 800px) {
-  .newsapps div {
+.newsapps ul {
+  float: left;
+  display: block;
+  margin-right: 2.35765%;
+  width: 100%;
+  padding: 0; }
+  .newsapps ul:last-child {
+    margin-right: 0; }
+  .newsapps ul li {
     float: left;
     display: block;
-    margin-right: 3.57866%;
-    width: 48.21067%;
-    padding: 0; }
-    .newsapps div:last-child {
-      margin-right: 0; } }
+    margin-right: 2.35765%;
+    width: 100%; }
+    .newsapps ul li:last-child {
+      margin-right: 0; }
+    @media screen and (min-width: 800px) {
+      .newsapps ul li {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 31.76157%; }
+        .newsapps ul li:last-child {
+          margin-right: 0; }
+        .newsapps ul li:nth-child(3n) {
+          margin-right: 0; } }
 
 body {
   color: #404040;
