--- a/main.css
+++ b/main.css
@@ -475,7 +475,7 @@ nav {
   width: 100%; }
   .newsapps li:last-child {
     margin-right: 0; }
-  @media screen and (min-width: 800px) {
+  @media screen and (min-width: 500px) {
     .newsapps li {
       float: left;
       display: block;
@@ -485,6 +485,5 @@ nav {
         margin-right: 0; }
       .newsapps li:nth-child(3n) {
         margin-right: 0; } }
-
-img {
+.newsapps img {
   width: 75%; }
