--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,13 +7,13 @@
           <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i>  {{ site.email }}</a>
         </li>
         <li>
-          <i class="fa fa-instagram"></i>: <a href="http://instagram.com/{{ site.insta_username }}">{{ site.insta_username }}</a> 
+          <a href="http://instagram.com/{{ site.insta_username }}"><i class="fa fa-instagram"></i> {{ site.insta_username }}</a> 
         </li>
         <li>
-          <i class="fa fa-twitter"></i>: <a href="http://twitter.com/{{ site.twitter_username }}">{{ site.twitter_username }}</a> 
+          <a href="http://twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter"></i> {{ site.twitter_username }}</a> 
         </li>
         <li>
-          <i class="fa fa-github"></i>: <a href="http://github.com/{{ site.github_username }}">{{ site.github_username }}</a> 
+          <a href="http://github.com/{{ site.github_username }}"><i class="fa fa-github"></i> {{ site.github_username }}</a> 
         </li>
       </ul>    
     </div>
