--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,20 +6,23 @@
       </a>
     </div>
     <nav>
+      <ul class="nav-list">
+        
         {% for page in site.pages %}
           {% if page.title %}
-            <div class="page-link"><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></div>
+            <li class="page-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
           {% endif %}
         {% endfor %}
-        <div class="page-link">
+        <li class="page-link">
           Say Hi:  
           <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i></a>  
           <a href="http://instagram.com/{{ site.insta_username }}"><i class="fa fa-instagram"></i></a>  
           <a href="http://twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter"></i></a>         
-        </div>
-        <div class="page-link">
+        </li>
+        <li class="page-link">
           Git: <a href="http://github.com/{{ site.github_username }}"><i class="fa fa-github"></i></a> 
-        </div>
+        </li>
+      </ul>
     </nav>
   </div>
 
