--- a/css/theme/_header.scss
+++ b/css/theme/_header.scss
@@ -1,5 +1,6 @@
 .site-title {
-  padding: 0.25em;
+  padding: .25em;
+
   h1 {
     @include font(2, center);
     color: $off-black;
@@ -13,22 +14,22 @@
 
 //Top Navigation Bar
 nav {
+  @include list-grid($medium, 12, 4);
   @include font(1, center);
   color: #000;
-  text-align:center;
-
-  @include div-grid($large, 12, 4);
+  margin-bottom: .5em;
+  text-align: center;
 }
 
 
 .page-link {
-  display: inline-block;
   border-right: 1px solid;
-  padding: 0 0.75em;
+  display: inline-block;
+  padding: 0 .75em;
 
   &:last-child {
-    border-right: none;
-    padding: 0 0 0 0.75em;
+    border-right: 0;
+    padding: 0 0 0 .75em;
   }
 
   i {
