--- a/main.css
+++ b/main.css
@@ -418,7 +418,7 @@ img {
   width: 100%; }
 
 .site-title {
-  padding: 0.25em; }
+  padding: .25em; }
   .site-title h1 {
     font: 300 2em Helvetica;
     text-align: center;
@@ -432,23 +432,33 @@ nav {
   font: 300 1em Helvetica;
   text-align: center;
   color: #000;
+  margin-bottom: .5em;
   text-align: center; }
-  @media screen and (min-width: 800px) {
-    nav div {
-      float: left;
-      display: block;
-      margin-right: 2.35765%;
-      width: 23.23176%; }
-      nav div:last-child {
-        margin-right: 0; } }
+  nav li {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 100%; }
+    nav li:last-child {
+      margin-right: 0; }
+    @media screen and (min-width: 640px) {
+      nav li {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 23.23176%; }
+        nav li:last-child {
+          margin-right: 0; }
+        nav li:nth-child(4n) {
+          margin-right: 0; } }
 
 .page-link {
-  display: inline-block;
   border-right: 1px solid;
-  padding: 0 0.75em; }
+  display: inline-block;
+  padding: 0 .75em; }
   .page-link:last-child {
-    border-right: none;
-    padding: 0 0 0 0.75em; }
+    border-right: 0;
+    padding: 0 0 0 .75em; }
   .page-link i:hover {
     color: #fd795b; }
 
@@ -466,7 +476,7 @@ nav {
   width: 100%; }
   .newsapps li:last-child {
     margin-right: 0; }
-  @media screen and (min-width: 500px) {
+  @media screen and (min-width: 640px) {
     .newsapps li {
       float: left;
       display: block;
