--- a/main.css
+++ b/main.css
@@ -432,7 +432,6 @@ nav {
   font: 300 1em Helvetica;
   text-align: center;
   color: #000;
-  margin-bottom: .5em;
   text-align: center; }
   nav li {
     float: left;
@@ -443,14 +442,17 @@ nav {
       margin-right: 0; }
     @media screen and (min-width: 640px) {
       nav li {
+        padding: 0;
         float: left;
         display: block;
         margin-right: 2.35765%;
         width: 23.23176%; }
-        nav li:last-child {
-          margin-right: 0; }
         nav li:nth-child(4n) {
+          margin-right: 0; }
+        nav li:last-child {
           margin-right: 0; } }
+  nav li {
+    margin-bottom: .5em; }
 
 .page-link {
   border-right: 1px solid;
@@ -478,13 +480,14 @@ nav {
     margin-right: 0; }
   @media screen and (min-width: 640px) {
     .newsapps li {
+      padding: 0;
       float: left;
       display: block;
       margin-right: 2.35765%;
       width: 31.76157%; }
-      .newsapps li:last-child {
-        margin-right: 0; }
       .newsapps li:nth-child(3n) {
+        margin-right: 0; }
+      .newsapps li:last-child {
         margin-right: 0; } }
 .newsapps img {
   width: 75%; }
