--- a/main.css
+++ b/main.css
@@ -402,7 +402,6 @@ a {
     text-decoration: underline; }
 
 header {
-  background: #bdcfbd;
   border-bottom: 1px solid;
   margin: 0;
   padding: 0; }
@@ -416,6 +415,9 @@ hr {
 
 img {
   width: 100%; }
+
+.site-header {
+  background: #bdcfbd; }
 
 .site-title {
   padding: .25em; }
@@ -495,7 +497,24 @@ nav {
 .newsapps img {
   width: 75%; }
 
-.about-me img {
-  width: 25%;
-  float: left;
-  margin-right: 1em; }
+@media screen and (min-width: 640px) {
+  .about-me .intro {
+    float: left;
+    display: block;
+    margin-right: 3.57866%;
+    width: 48.21067%;
+    margin-right: 0; }
+    .about-me .intro:last-child {
+      margin-right: 0; } }
+.about-me .intro-image {
+  margin: 0 1em 1em 0; }
+  @media screen and (min-width: 640px) {
+    .about-me .intro-image {
+      float: left;
+      display: block;
+      margin-right: 3.57866%;
+      width: 48.21067%; }
+      .about-me .intro-image:last-child {
+        margin-right: 0; } }
+  .about-me .intro-image img {
+    width: 100%; }
