--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
     {% include header.html %}
 
     <div class="wrap">
-      {{ content }}
+      <div class="block">
+        {{ content }}
+      </div>
     </div>
 
     {% include footer.html %}
