--- a/css/helpers/_settings.scss
+++ b/css/helpers/_settings.scss
@@ -1,8 +1,8 @@
 //colors
-$off-white: #F5F5F5;
+$off-white: #f5f5f5;
 $off-black: #404040;
-$gray: #666666;
-$dk-teal: #BDCFBD;
-$lt-teal: #CEDFCE;
-$orange: #FD795B;
+$gray: #666;
+$dk-teal: #bdcfbd;
+$lt-teal: #cedfce;
+$orange: #fd795b;
 
