--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="wrap">
     <div class="site-title">
       <a class="site-title" href="{{ site.baseurl }}/">
-        <h1 class="center-text">{{ site.title }}</h1>
+        <h1>{{ site.title }}</h1>
       </a>
     </div>
     <nav>
