--- a/css/theme/_footer.scss
+++ b/css/theme/_footer.scss
@@ -1,3 +1,13 @@
+footer {
+  a {
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
 .social {
   @include font(1, center);
   @include letter-space(3);
