minor style changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class="social">
       <ul>
         <li>
-          <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i>  {{ site.email }}</a>
+          <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i>  email me</a>
         </li>
         <li>
           <a href="http://instagram.com/{{ site.insta_username }}"><i class="fa fa-instagram"></i> {{ site.insta_username }}</a> 
