--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
           <a href="http://github.com/{{ site.github_username }}">Git <i class="fa fa-github"></i></a> 
         </li>
         <li class="page-link">
-          Say Hello    
+          Say Hi    
           <a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i></a>  
           <a href="http://instagram.com/{{ site.insta_username }}"><i class="fa fa-instagram"></i></a>  
           <a href="http://twitter.com/{{ site.twitter_username }}"><i class="fa fa-twitter"></i></a>         
