--- a/main.css
+++ b/main.css
@@ -441,6 +441,8 @@ h2 {
 nav {
   font: 300 1em Helvetica;
   text-align: center;
+  letter-spacing: 3px;
+  border-top: 1px solid #666666;
   color: #000;
   text-align: center; }
   nav li {
@@ -468,7 +470,6 @@ nav {
   padding: 0; }
 
 .page-link {
-  border-right: 1px solid;
   display: inline-block;
   padding: 0 .75em; }
   .page-link:last-child {
