--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 <div class="post">
+  <div class="main-grid">
+    <header class="post-header">
+      <h1>{{ page.title }}</h1>
+    </header> 
+  </div>
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-  </header>
 
   <article class="post-content">
   {{ content }}
