--- a/css/main.scss
+++ b/css/main.scss
@@ -7,9 +7,10 @@
 @import "helpers/typography";
 
 @import "theme/layout";
-@import "theme/base-theme";
+@import "theme/global";
 @import "theme/header";
 @import "theme/footer";
+@import "theme/landing";
 @import "theme/newsapps";
 @import "theme/about";
 
