--- a/css/theme/_header.scss
+++ b/css/theme/_header.scss
@@ -28,6 +28,7 @@
 //Top Navigation Bar
 nav {
   @include list-grid($large, 12, 4);
+  @include list-grid($large, 12, 2);
   @include font(1, center);
   @include letter-space(3);
 
@@ -46,7 +47,6 @@ nav {
 }
 
 .page-link {
-  // border-right: 1px solid;
   display: inline-block;
   padding: 0 .75em;
 
